[gd_scene load_steps=6 format=3 uid="uid://game_scene"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_game"]
[ext_resource type="Script" path="res://scripts/chess_board.gd" id="2_board"]
[ext_resource type="FontFile" uid="uid://font_editundo_game" path="res://assets/fonts/editundo.ttf" id="3_font"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.627, 0.627, 0.667, 1.0)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.15, 0.15, 0.2, 0.95)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_game")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.08, 0.1, 0.12, 1)

[node name="ChessBoard" type="Node2D" parent="."]
script = ExtResource("2_board")

[node name="UI" type="CanvasLayer" parent="."]

[node name="TopBar" type="HBoxContainer" parent="UI"]
offset_left = 20.0
offset_top = 10.0
offset_right = 1425.0
offset_bottom = 60.0

[node name="TurnLabel" type="Label" parent="UI/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 36
text = "White's Turn"

[node name="BackButton" type="Button" parent="UI/TopBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0.235, 0.235, 0.235, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "Back to Menu"

[node name="GameOverPanel" type="Panel" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = 120.0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBox" type="VBoxContainer" parent="UI/GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_constants/separation = 15

[node name="WinnerLabel" type="Label" parent="UI/GameOverPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 36
text = "White Wins!"
horizontal_alignment = 1

[node name="PlayAgainButton" type="Button" parent="UI/GameOverPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.235, 0.235, 0.235, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "Play Again"

[node name="MenuButton" type="Button" parent="UI/GameOverPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.235, 0.235, 0.235, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "Main Menu"

[connection signal="pressed" from="UI/TopBar/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="UI/GameOverPanel/VBox/PlayAgainButton" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="UI/GameOverPanel/VBox/MenuButton" to="." method="_on_menu_button_pressed"]
